# linorobot2_hoverboard

./: .gitignore  LICENSE  README.md  prepare_sd.bat  prepare_sd.py  robot.service  run.sh  setup.sh  setup_pc.sh  setup_ros2.sh
GD32-hover-master-slave/Inc/: config.h
GD32-hover-master-slave/Src/: bldc.c
Hoverboard-Firmware-Hack-Gen2/: CommunicationOverview.ods  README.md
Hoverboard-Firmware-Hack-Gen2/HoverBoardGigaDevice/: Hoverboard.uvguix.patri  Hoverboard.uvguix.piete  Hoverboard.uvoptx  Hoverboard.uvprojx  Makefile
Hoverboard-Firmware-Hack-Gen2/HoverBoardGigaDevice/Inc/: bldc.h  comms.h  commsBluetooth.h  commsSteering.h  config.h  defines.h  led.h  pid.h  setup.h
Hoverboard-Firmware-Hack-Gen2/HoverBoardGigaDevice/Listings/: Hoverboard.map  startup_gd32f1x0.lst
Hoverboard-Firmware-Hack-Gen2/HoverBoardGigaDevice/Objects/: Hoverboard.axf  Hoverboard.build_log.htm  Hoverboard.htm  Hoverboard_Target 1.dep  bldc.crf  bldc.d  comms.crf  comms.d  commsbluetooth.crf  commsbluetooth.d  commsmasterslave.crf  commsmasterslave.d  commssteering.crf  commssteering.d  gd32f1x0_adc.crf  gd32f1x0_adc.d  gd32f1x0_dbg.crf  gd32f1x0_dbg.d  gd32f1x0_dma.crf  gd32f1x0_dma.d  gd32f1x0_fwdgt.crf  gd32f1x0_fwdgt.d  gd32f1x0_gpio.crf  gd32f1x0_gpio.d  gd32f1x0_i2c.crf  gd32f1x0_i2c.d  gd32f1x0_misc.crf  gd32f1x0_misc.d  gd32f1x0_opa.crf  gd32f1x0_pmu.crf  gd32f1x0_pmu.d  gd32f1x0_rcu.crf  gd32f1x0_rcu.d  gd32f1x0_syscfg.crf  gd32f1x0_syscfg.d  gd32f1x0_timer.crf  gd32f1x0_timer.d  gd32f1x0_usart.crf  gd32f1x0_usart.d  gd32f1x0_wwdgt.crf  (+11 more)
Hoverboard-Firmware-Hack-Gen2/HoverBoardGigaDevice/Src/: bldc.c  comms.c  commsBluetooth.c  commsMasterSlave.c  commsSteering.c  it.c  led.c  main.c  pid.c  setup.c
Hoverboard-Firmware-Hack-Gen2/Python/: test.py
Python_Module/: setup.cfg
Python_Module/hoverboard_controller/: hoverboard_controller.py
Python_Module/test/: get_battery.py  get_controlblock.py  get_current.py  get_debug.py  get_enc.py  get_speed.py  set_backled.py  set_buzzer.py  set_led.py  set_pid.py  set_speed.py  test.py
Python_Module/test/hoverboard_test/: a.py  build.sh  comms.c  test.py
doc/TikZ/hla/: hla.tex
doc/source/: conf.py  customization.rst  hoverboard.rst  index.rst  intro.rst  issues.rst  raspi.rst
hdumcke_merge_ws/sc/: horo-nav-test.yaml  horo-nav-viz.yaml  horo-nav.yaml  horo-save-map.yaml  horo-slam-test.yaml  horo-slam-viz.yaml  horo-slam.yaml  horo-stop_ros.yaml  nav-demo-stop_ros.yaml  nav-demo.yaml  stop_ros.sh
hdumcke_merge_ws/src/horo_navigation/: CMakeLists.txt
hdumcke_merge_ws/src/horo_viz/: CMakeLists.txt  package.xml
hdumcke_merge_ws/src/ldlidar/: CMakeLists.txt  ldlidar.rules  readme.md
hdumcke_merge_ws/src/ldlidar/launch/: ldlidar.launch.py
hdumcke_merge_ws/src/ldlidar/src/: lipkg.cpp
hdumcke_ws/sc/: horo-nav-test.yaml  horo-stop_gazebo.sh  horo-stop_gazebo.yaml
hdumcke_ws/src/horo_controller/: package.xml  setup.cfg  setup.py
hdumcke_ws/src/horo_description/: CMakeLists.txt
hdumcke_ws/src/horo_hardware/: CMakeLists.txt  horo_hardware.xml  package.xml
hdumcke_ws/src/horo_navigation/: package.xml
hdumcke_ws/src/hoverboard-driver-pkg/: CMakeLists.txt
hdumcke_ws/src/ldlidar/: package.xml
hdumcke_ws/src/ldlidar/include/: ldlidar_node.h  lipkg.h
hdumcke_ws/src/ldlidar/src/: ldlidar.cpp  ldlidar_node.cpp
hdumcke_ws/src/my_robot_description/: CMakeLists.txt
hoverboard_proxy/: hoverboard-proxy.cpp  hoverboard-proxy.h  hoverboard-proxy.service  install.sh
hoverboard_proxy_gen1/: Makefile  hoverboard-proxy.cpp  hoverboard-proxy.service  protocol.h
imu/: imu.service  imu.sh  imu_ros_install.sh  mpu6050driver.cpp  mpu6050driver_launch.py  ros_install.sh
imu/test/: quaternion_plotter.py  requirements.txt  test.py
jupyternb/: README.rst  requirements.txt  requirements_differential_drive.txt
jupyternb/differential_drive/: Differential Drive.ipynb
jupyternb/differential_drive/.ipynb_checkpoints/: Differential Drive-checkpoint.ipynb
jupyternb/horo/: 1-kinematics.ipynb  2-controller.ipynb  3-firmware.ipynb  3.1-update_firmware.ipynb  3.1-update_firmware_patrick.ipynb  4-ros.ipynb  horo_controller_simple.py  test-firmware-feeback.py  test-firmware.py  test-firmware_v2.py  ubuntu@192.168.1.45
jupyternb/horo/.ipynb_checkpoints/: 2-controller-checkpoint.ipynb  3-firmware-checkpoint.ipynb  4-ros-checkpoint.ipynb
oak-d-lite/: oak-d-lite.service  oak-d-lite.sh  ros_install.sh
pat92fr/ros2_ws/: jog_laoyt_pids.xml
ros2/horo_bringup/: CMakeLists.txt  package.xml
ros2/horo_bringup/launch/: joy_teleop.launch.py
ros2/horo_description/: package.xml
ros2/horo_description/launch/: description.launch.py
ros2/horo_description/urdf/: diffbot.ros2_control.xacro
ros2/horo_gazebo/: CMakeLists.txt  package.xml
ros2/horo_gazebo/launch/: gazebo.launch.py
ros2/horo_hardware/: CMakeLists.txt
ros2/horo_hardware/include/horo_hardware/: hoverboard_proxy.hpp  hoverboard_system.hpp
ros2/horo_hardware/src/: hoverboard_proxy.cpp  hoverboard_system.cpp
ros2/horo_hardware/test/: test_load_horo_hardware_controller.cpp
ros2/linorobot2_hoverboard_bringup/: CMakeLists.txt  package.xml
ros2/linorobot2_hoverboard_bringup/launch/: bringup.launch.py  joy_teleop.launch.py
ros2/linorobot2_hoverboard_control/: package.xml  setup.cfg  setup.py
ros2/linorobot2_hoverboard_control/launch/: linorobot2_hoverboard_interface.launch.py
ros2/linorobot2_hoverboard_control/linorobot2_hoverboard_control/: hoverboard_interface.py
ros2/linorobot2_hoverboard_description/: CMakeLists.txt  package.xml
ros2/linorobot2_hoverboard_description/launch/: description.launch.py
ros2/linorobot2_hoverboard_description/urdf/: diffbot.ros2_control.xacro
ros2/linorobot2_hoverboard_description/urdf/robots/: square.urdf.xacro  urdf.xacro
ros2/linorobot2_hoverboard_description/urdf/sensors/: generic_laser.urdf.xacro
ros2/linorobot2_hoverboard_gazebo/: CMakeLists.txt  package.xml
ros2/linorobot2_hoverboard_gazebo/launch/: gazebo.launch.py
ros2/linorobot2_hoverboard_hardware/: CMakeLists.txt  linorobot2_hoverboard_hardware.xml  package.xml
(+80 files in other folders)
