[metadata]
name             = hoverboard_controller
version          = 0.1.1
summary          = Hoverboard Controller
description_file = README.rst
author           = Horst Dumcke
author_email     = hdumcke@marlysys.com

[files]
packages         = hoverboard_controller

[global]
setup-hooks      = pbr.hooks.setup_hook

[options]
include_package_data = True

[options.package_data]
* = *.png

[entry_points]

[pbr]
autodoc_tree_index_modules = True
autodoc_index_modules      = True

[build_sphinx]
all_files       = 1
build-dir       = doc/build
source-dir      = doc/source

[wheel]
universal       = 1
