<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>linorobot2_hoverboard_description</name>
    <version>0.0.0</version>
    <description>Linorobot2 Hoverboard Description Package</description>
    <maintainer email="hdumcke@marlysys.com">Horst Dumcke</maintainer>
    <license>MIT</license>
    <url type="repository">https://github.com/hdumcke/linorobot2_hoverboard.git</url>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <exec_depend>joint_state_publisher</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>rviz2</exec_depend>
    <exec_depend>xacro</exec_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
