<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ldlidar</name>
  <version>0.0.0</version>
  <description>The ldlidar package</description>

  <maintainer email="weyne@todo.todo">weyne</maintainer>

  <license>TODO</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>libudev-dev</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>udev</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
